fix: double scrollbar

--- a/src/assets/style/style.css
+++ b/src/assets/style/style.css
@@ -16,14 +16,17 @@ body, html {
 	height: 100vh;
 	width: 100vw;
 	overflow: hidden;
-	overflow-y: scroll;
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-attachment: fixed;
 	background-color: black;
 	background-image: url("https://cdn.wallpapersafari.com/36/2/YbOwfI.png");
 
- }
+}
+
+body {
+	overflow-y: scroll;
+}
 
 .bordered {
 
